--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,8 +15,11 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: Godwin-7 # Use your GitHub username correctly!
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: Godwin-7  # Correct GitHub username here
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+      - name: Show Generated Files
+        run: ls -la dist
       - name: Push Contribution Snake to Output Branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
